tests/type_errors/type_aliases.sy
mod A

type A p = p

def f : forall a. A a -> a : q = q

def main : Str := f ' 1

--+ expected exit status: 1
--+ expected stderr:
--+ > Escaped generics, how did you get here? Please send me the code.
--+ 
--+ t42
--+ ----
--+ t28
--+ 
--+ tests/type_errors/type_aliases.sy
--+   7| def main : Str := f ' 1
--+                          ^
--+ > Failed to merge types.
--+ 
--+ t41
--+ ----
--+ Int
--+ 
--+ tests/type_errors/type_aliases.sy
--+   7| def main : Str := f ' 1
--+                          ^

